--- a/css/reset.css
+++ b/css/reset.css
@@ -13,7 +13,7 @@ html {
     overflow-wrap: break-word;
 }
 body {
-    min-height: 100vh;
+   
     margin: 0;
 }
 h1, h2, h3, h4, h5, h6, p {
@@ -27,13 +27,11 @@ ul, ol, li , figure {
    text-indent: 0;
    list-style: none;
 }
-img, svg {
+img, {
     vertical-align: middle;
     border-style: none;
 }
-svg:not([fill]) {
-    fill: currentColor;
-}
+
 a {
     color: inherit;
     text-decoration: inherit;
